2011-07-13  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Protect pad's info with lock (called from different gst threads)

2011-05-30  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/fmp4/fmp4.py:
	Add one more check for sync

2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Fix the preroll calculation commit. The Quality objects are in the
	values of the dict instead of the values

2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/fmp4/fmp4.py:
	Fix sychronisation issues between video streams

2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/fmp4/fmp4.py:
	Remove unused imports

2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Fix preroll calculation using the DVR window length

2011-05-09  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Check that all streams have enough fragments before setting the
	mood to happy

2011-04-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Add more checks to the smooth streamer in case the sps/pps are not 
	set in the track or if we receive fragments with an unknown id

2011-04-05  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	Added the property hls-url that will be the base url used to render
	the playlist entries.

2011-04-05  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* configure.ac:
	* flumotion/component/Makefile.am: